# restaurant_simulator

./: CMakeLists.txt
resources/data/: controls.json
resources/fonts/: pixix.json
src/: animation.cpp  animation.h  application.cpp  application.h  assets.h  boxTemplate.cpp  boxTemplate.h  button.cpp  button.h  camera.cpp  camera.h  character.cpp  character.h  clock.cpp  clock.h  collider.cpp  collider.h  color.cpp  color.h  controls.h  drawable.cpp  drawable.h  encoding.cpp  encoding.h  fixedDrawable.h  font.cpp  font.h  input.cpp  input.h  inputBox.cpp  inputBox.h  jsonval.cpp  jsonval.h  main.cpp  math.h  mouse.cpp  mouse.h  object.cpp  object.h  pack.h  (+27 more)
